<resources>
    <string name="app_name">WeatherApplication</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="date">Date</string>
    <string name="country">Country</string>
    <string name="degree">Degree</string>
    <string name="weather_state">Weather State</string>
    <string name="pressure_value">Pressure Value</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity :</string>
    <string name="humidity_value">Humidity Value</string>
    <string name="wind">Wind :</string>
    <string name="wind_speed_value">Wind Speed Value</string>
    <string name="cloud">Cloud :</string>
    <string name="cloud_value">Cloud Value</string>
    <string name="visibility">Visibility :</string>
    <string name="visbility_value">Visbility value</string>
    <string name="hour_value">Hour Value</string>
    <string name="temprature_value">Temprature Value</string>
    <string name="Country">TextView</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="start_date_value">Start Date Value</string>
    <string name="end_date_value">End Date Value</string>
    <string name="specific_time_value">Specific time value</string>
    <string name="city_value">City value</string>
    <string name="start_date">Start Date :</string>
    <string name="end_date">End Date :</string>
    <string name="specific_time">Specific Time :</string>
    <string name="city">City :</string>
    <string name="day">Day</string>
    <string name="clouds_value">Clouds value</string>
    <string name="minimum_temprature_value">Minimum temprature value</string>
    <string name="maximum_temprature_value">Maximum Temprature Value</string>
    <string name="weather">Weather</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="alert">Alert</string>
    <string name="settings">Settings</string>

</resources>